# Ctutorial

./: .gitignore  CMakeLists.txt  keyboardshortcuts  output_file.i  run.bat  run.sh  runtest.bat  runtest.sh  test.sh  valgrind.sh
src/: main.c  main_test.c
src/allocator/: alloc.c  alloc.h
src/collection/: hashmap.c  linkedlist.c  vector.c  vector.h
src/ecs/: datastructure.c  datastructure.h  ecs.c  ecs.h
src/hashmap/: hashmap.c  hashmap.h  internalhash.c  internalhash.h  macro.h
src/hello/: hello.c
src/list/: linkedlist.c  linkedlist.h
test/: main.c
